    Fixed by: Bas van der Vlies

  * If a blank email is sent with just an attachment, a blank 
    comment is appended to the comments. fixed closes #89

    Reported/Fixed by: ???
    Applied by: Bas van der Vlies

  * added white_list parameter.  If set then only mail is accepted if
    sender matches.
    Author: Bas van der Vlies, jon dot wbstr at gmail dot com


  * alternate notify template did not work for trac version 0.11 
    (#90).
    Reported/Fixed by: hju at jochenkuhl dot de
    Applied by       : Bas van der Vlies

  * added 'alternate_notify_template_update'. When set this notify 
    template name will be used for ticket updates (#90).
    Author: Bas van der Vlies, hju at jochenkuhl dot de
    
   
2008-05-30
  * Fixed debian control file. Package can be build on any platform and
    not only on i386 platforms:

    Author: Christian Iversen ci add sikkerhed dot org
    Applied by: Bas van der Vlies

  * We now use the trac configuration parser routine
    Author: andrei2102 add gmail dot com
    Applied by: Bas van der Vlies

  * Added new command line option -n/--dry-run. This option only show
    what commands will be executed.
    Author: Bas van der Vlies

  * the default values for tickets can now also be set in 
   'email2trac.conf'. So you can use different values when an email
    is converted to a ticket. The ticket value is set to this rules
     - email2trac.conf
     - trac.ini

    email2trac.conf use same format as trac.ini, eg email2trac.conf:
      [project]
      default_component : test

    closes request #55, for more info see:
    - https://subtrac.sara.nl/oss/email2trac/wiki/Email2tracConfiguration

     Requested by: greg dot deakyne at etapestry dot com
     Implemented by: Bas van der Vlies

  * Fixed a bug in ticket_update. It failed when project did not have 
    ticket component field,  closes bug #62
    Reported by: gernot dot hillier add siemens dot com
    Fixed by: Bas van der Vlies
	  
  * run_email2trac.c: