@@ -412,7 +412,10 @@ class TicketEmailParser(object):
 	def get_sender_info(self, message):
 		"""
 		Get the default author name and email address from the message
-		"""
+		""" 
+
+		self.email_to = self.email_to_unicode(message['to']) 
+		self.to_name, self.to_email_addr = email.Utils.parseaddr (self.email_to) 
 
 		self.email_from = self.email_to_unicode(message['from'])
 		self.author, self.email_addr  = email.Utils.parseaddr(self.email_from)
@@ -813,6 +816,11 @@ class TicketEmailParser(object):
 		if self.email_header_acl('black_list', self.email_addr, False):
 			if self.DEBUG > 1 :
  				print 'Message rejected : %s in black list' %(self.email_addr)
+			return False
+
+		if self.email_header_acl('recipient_list', self.to_email_addr, True):
+			if self.DEBUG > 1 :
+ 				print 'Message rejected : %s not in recipient list' %(self.to_email_addr)
 			return False
 
 		# If drop the message
